--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
     display: flex;
 }
 
+.hide {
+    display: none;
+}
+
 .header-brand-name {
     color: rgb(19, 19, 19);
     font-family: Work Sans;
@@ -116,6 +120,7 @@ main {
 
 .feature-page {
     align-items: center;
+    margin-bottom: 120px;
 }
 
 .feature-right {
@@ -150,6 +155,80 @@ main {
 
 .feature {
     color: rgb(255, 144, 14);
+}
+
+/* feature-love*/
+#feature-love {
+
+    border-left: 5px solid rgb(255, 144, 14);
+}
+
+.feature-love-title {
+    padding-left: 20px;
+    width: 468px;
+    height: 106px;
+    color: rgb(19, 19, 19);
+    font-family: Work Sans;
+    font-size: 2.8rem;
+    font-weight: 700;
+    /* text-align: left; */
+}
+
+.feature-love-description {
+    width: 586px;
+    height: 78px;
+    color: rgb(114, 114, 114);
+    font-family: Work Sans;
+    padding-left: 30px;
+}
+
+.feature-love-container {
+    /* display: flex; */
+    justify-content: space-evenly;
+}
+
+.right-side-img {
+    width: 608px;
+    height: 1102px;
+
+}
+
+#experience-year {
+    
+    font-family: Work Sans;
+    /* width: 258px;
+    height: 109px; */
+    font-weight: 700;
+    font-size: 3rem;
+}
+
+#experience-badge {
+    margin-top: -50px;
+    margin-left: -100px;
+    padding: 46px 42px;
+}
+
+.left-side {
+    width: 586px;
+    height: 171px;
+    border-radius: 8px;
+    padding: 30px;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    background: rgb(255, 255, 255);
+}
+
+.left-side-description {
+    width: 514px;
+    height: 78px;
+    color: rgb(114, 114, 114);
+    font-family: Work Sans;
+}
+
+.left-side-title {
+    color: rgb(19, 19, 19);
+    font-family: Work Sans;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 /* some-facets */
@@ -217,10 +296,7 @@ main {
     /* text-align: center; */
 }
 
-.fact-icon {
-    /* justify-content: center;
-    align-items: center; */
-}
+
 
 /* sponser-page */
 .our-sponsors {
@@ -282,25 +358,81 @@ main {
 
 /* Responsive media query */
 @media screen and (max-width:576px) {
-    /* *{
+    * {
         margin: 0 auto;
-    } */
+    }
 
     .navber,
     .nav-link,
     .feature-page,
     .fact-card,
-    .sponser-img {
+    .sponser-img,
+    .feature-love-container {
         flex-direction: column;
     }
+    #experience-badge{
+        display: none;
+    }
+    .right-side-img {
+        width: 100%;
+        height: 500px;
+    }
 
-    .nav-item{
+    .left-side {
+        width: 360px;
+        height: 171px;
+        border-radius: 8px;
+        padding: 0;
+        padding-left: 10px;
+        padding-top: 10px;
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+        background: rgb(255, 255, 255);
+
+    }
+
+    .left-side-description {
+        width: 354px;
+        height: 88px;
+        color: rgb(114, 114, 114);
+        font-family: Work Sans;
+    }
+
+    .feature-love-title {
+
+        /* padding-left: 5px; */
+        max-width: 350px;
+        height: 156px;
+        color: rgb(19, 19, 19);
+        font-family: Work Sans;
+        font-size: 2.8rem;
+        font-weight: 700;
+    }
+
+    #feature-love {
+        border: none;
+    }
+
+    .feature-love-description {
+        width: 356px;
+        height: 78px;
+        color: rgb(114, 114, 114);
+        font-family: Work Sans;
+        padding-left: 0px;
+    }
+
+    .f-l-c {
+        max-width: 350px;
+    }
+
+    .nav-item {
         padding-bottom: 5px;
     }
-    .nav-link{
+
+    .nav-link {
 
         padding-left: 0;
     }
+
     .header-brand-name {
         color: rgb(19, 19, 19);
         font-family: Work Sans;
@@ -326,7 +458,7 @@ main {
         text-align: center;
         font-size: 2.5rem;
     }
-    
+
     .feature-description {
         max-width: 360px;
 
@@ -350,23 +482,25 @@ main {
         color: rgb(114, 114, 114);
         font-family: Work Sans;
     }
+
     .sponser-description {
         max-width: 360px;
         text-align: center;
         color: rgb(114, 114, 114);
         font-family: Work Sans;
     }
+
     .sponser-img {
         align-items: center;
         justify-content: center;
         /* padding-bottom: 30px; */
     }
 
-    .spons-img{
+    .spons-img {
         margin-bottom: 20px;
     }
 
-    
+
 
 }
 
@@ -375,7 +509,8 @@ main {
 
 @media screen and (min-width:577px) and (max-width:1024px) {
 
-    .feature-page {
+    .feature-page,
+    .feature-love-container {
         flex-direction: column;
     }
 
@@ -384,6 +519,62 @@ main {
         font-size: 3rem;
         /* text-align: center; */
     }
+
+    .right-side-img {
+        width: 100%;
+        height: 500px;
+    }
+
+    .left-side {
+        width: 820px;
+        height: 171px;
+        border-radius: 8px;
+        padding: 0;
+        padding-left: 10px;
+        padding-top: 10px;
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+        background: rgb(255, 255, 255);
+
+    }
+
+    .left-side-description {
+        width: 820px;
+        height: 88px;
+        color: rgb(114, 114, 114);
+        font-family: Work Sans;
+    }
+
+    .feature-love-title {
+        text-align: center;
+        /* padding-left: 30px;  */
+        height: 156px;
+        color: rgb(19, 19, 19);
+        font-family: Work Sans;
+        font-size: 3.8rem;
+        font-weight: 700;
+        padding-left: 120px;
+        width: 548px;
+    }
+
+    #feature-love {
+        border: none;
+    }
+
+    .feature-love-description {
+        width: 800px;
+        height: 100px;
+        font-size: 1.25rem;
+        text-align: center;
+        color: rgb(114, 114, 114);
+        font-family: Work Sans;
+        padding-left: 0px;
+    }
+
+    .f-l-c {
+        max-width: 850px;
+    }
+
+    /*  */
 
 
     .facts-title {
