--- a/styles.css
+++ b/styles.css
@@ -96,9 +96,10 @@
     max-width: 100%;
 }
 
-/* main */
-main {
+/* universal */
+* {
     max-width: 1440px;
+    margin: auto;
 }
 
 /* feature page*/
